<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pizza Ultimate</string>
    <string name="menu_settings">Settings</string>

    <string name="textview_name">Username</string>
    <string name="textview_meal">Gericht</string>
    <string name="textview_size">Größe</string>
    <string name="textview_price">Preis in Euro</string>

    <string name="hint_name">Max Mustermann</string>
    <string name="hint_description">Pizza Salami</string>
    <string name="hint_price">3,50</string>

    <string name="button_send">Absenden</string>
    <string name="button_reset">Reset</string>

    <string name="title_activity_main">Bestellung</string>
    <string name="title_activity_overview">Bestellübersicht</string>
    <string name="title_activity_recent">Alte Bestellungen</string>
    <string name="title_activity_admin">Admin</string>

    <string-array name="array_size">
        <item>Classic</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>