<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textview_name"
            android:id="@+id/textView_name"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:id="@+id/edit_name" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textview_meal"
            android:id="@+id/textView_meal"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:id="@+id/edit_meal" android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textview_size"
            android:id="@+id/textView_size"/>
    <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textview_price"
            android:id="@+id/textView_price"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/hint_price"
            android:id="@+id/edit_price" android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:id="@+id/button_send"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_reset"
            android:id="@+id/button_reset"/>
</LinearLayout>